--- a/e_commerce/templates/login.html
+++ b/e_commerce/templates/login.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-<title>Register LongCommerce</title>
+<title>Login LongCommerce</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -14,10 +14,8 @@
 </head>
 <body>
 <div class="signup-form">
-    <form method="post">
-        {% csrf_token %}
-		<h2>Sign Up</h2>
-		<p>Please fill in this form to create an account!</p>
+    <form action="/examples/actions/confirmation.php" method="post">
+		<h2>Login</h2>
 		<hr>
         <div class="form-group">
 			<div class="input-group">
@@ -29,7 +27,6 @@
 				<input type="text" class="form-control" name="username" placeholder="Username" required="required">
 			</div>
         </div>
-
 		<div class="form-group">
 			<div class="input-group">
 				<div class="input-group-prepend">
@@ -40,29 +37,18 @@
 				<input type="password" class="form-control" name="password" placeholder="Password" required="required">
 			</div>
         </div>
-
-        <div class="form-group">
-			<label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
-		</div>
 		<div class="form-group">
-            <input type="submit" class="btn btn-primary btn-lg" value="Sign Up">
+            <button type="submit" class="btn btn-primary btn-lg">Login </button>
         </div>
     </form>
-	<div class="text-center">Already have an account? <a href="../templates/login.html">Login here</a></div>
-    {% if messages %}
-    {% for result in messages %}
-    <div class="alert alert-primary" role="alert">
-        Register Success!!!
-      </div>
-    {% endfor %}
-    {% endif %}
+    <div class="text-center">Don't have an account? <a href="../templates/index.html">Register here</a></div>
 </div>
 </body>
 
 <style>
     body {
         color: #fff;
-        background: #19aa8d;
+        background: #194caa;
         font-family: 'Roboto', sans-serif;
     }
     .form-control {
@@ -113,7 +99,7 @@
     .signup-form .btn, .signup-form .btn:active {        
         font-size: 16px;
         font-weight: bold;
-        background: #19aa8d !important;
+        background: #194caa !important;
         border: none;
         min-width: 140px;
     }
