--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-<title>Register LongCommerce</title>
+<title>Login LongCommerce</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -49,58 +49,11 @@
 			</div>
         </div>
 
-        <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="fa fa-user"></i>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="firstName" placeholder="First name" required="required">
-			</div>
-        </div>
-
-        <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="fa fa-user"></i>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="lastName" placeholder="Last name" required="required">
-			</div>
-        </div>
-
-        <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="fa fa-envelope"></i>
-					</span>                    
-				</div>
-				<input type="email" class="form-control" name="email" placeholder="Email" required="required">
-			</div>
-        </div>
-
-        <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="fa fa-phone"></i>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="tel" placeholder="Phone number" required="required">
-			</div>
-        </div>
-
-        <div class="form-group">
-			<label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
-		</div>
 		<div class="form-group">
             <input type="submit" class="btn btn-primary btn-lg" value="Sign Up">
         </div>
     </form>
-	<div class="text-center">Already have an account? <a href="../login">Login here</a></div>
+	<div class="text-center">Don't have an account? <a href="../register">Register here</a></div>
 </div>
 </body>
 
