--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -94,6 +94,50 @@
         </div>
 
         <div class="form-group">
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">
+						<i class="bi bi-signpost-fill"></i>
+					</span>                    
+				</div>
+				<input type="text" class="form-control" name="city" placeholder="City" required="required">
+			</div>
+        </div>
+
+        <div class="form-group">
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">
+						<i class="bi bi-signpost-fill"></i>
+					</span>                    
+				</div>
+				<input type="text" class="form-control" name="district" placeholder="District" required="required">
+			</div>
+        </div>
+
+        <div class="form-group">
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">
+						<i class="bi bi-signpost-fill"></i>
+					</span>                    
+				</div>
+				<input type="text" class="form-control" name="ward" placeholder="Ward" required="required">
+			</div>
+        </div>
+
+        <div class="form-group">
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">
+						<i class="bi bi-signpost"></i>
+					</span>                    
+				</div>
+				<input type="text" class="form-control" name="description" placeholder="Address description" required="required">
+			</div>
+        </div>
+
+        <div class="form-group">
 			<label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
 		</div>
 		<div class="form-group">
