--- a/register/templates/login.html
+++ b/register/templates/login.html
@@ -16,13 +16,13 @@
 <div class="signup-form">
     <form method="post">
         {% csrf_token %}
-		<h2>Sign Up</h2>
-		<p>Please fill in this form to create an account!</p>
+		<h2>Login</h2>
+		<p>Please fill in this form to login!</p>
 		<hr>
         {% if messages %}
         {% for result in messages %}
-        <div class="alert alert-primary" role="alert">
-            Register Success!!!
+        <div class="alert alert-danger" role="alert">
+            Login fail!!!
         </div>
         {% endfor %}
         {% endif %}
@@ -50,7 +50,7 @@
         </div>
 
 		<div class="form-group">
-            <input type="submit" class="btn btn-primary btn-lg" value="Sign Up">
+            <input type="submit" class="btn btn-primary btn-lg" value="Login">
         </div>
     </form>
 	<div class="text-center">Don't have an account? <a href="../register">Register here</a></div>
