--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-<title>Register LongCommerce</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
+    <title>Register LongCommerce</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 </head>
 <body>
 <div class="signup-form">
     <form method="post">
         {% csrf_token %}
-		<h2>Sign Up</h2>
-		<p>Please fill in this form to create an account!</p>
-		<hr>
+        <h2>Sign Up</h2>
+        <p>Please fill in this form to create an account!</p>
+        <hr>
         {% if messages %}
         {% for result in messages %}
         <div class="alert alert-primary" role="alert">
@@ -28,123 +28,125 @@
         {% endif %}
 
         <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
+            <div class="input-group">
+                <div class="input-group-prepend">
 					<span class="input-group-text">
 						<span class="fa fa-user"></span>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="username" placeholder="Username" required="required">
-			</div>
+					</span>
+                </div>
+                <input type="text" class="form-control" name="username" placeholder="Username" required="required">
+            </div>
         </div>
 
-		<div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
+        <div class="form-group">
+            <div class="input-group">
+                <div class="input-group-prepend">
 					<span class="input-group-text">
 						<i class="fa fa-lock"></i>
-					</span>                    
-				</div>
-				<input type="password" class="form-control" name="password" placeholder="Password" required="required">
-			</div>
+					</span>
+                </div>
+                <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+            </div>
         </div>
 
         <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
+            <div class="input-group">
+                <div class="input-group-prepend">
 					<span class="input-group-text">
 						<i class="fa fa-user"></i>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="firstName" placeholder="First name" required="required">
-			</div>
+					</span>
+                </div>
+                <input type="text" class="form-control" name="firstName" placeholder="First name" required="required">
+            </div>
         </div>
 
         <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
+            <div class="input-group">
+                <div class="input-group-prepend">
 					<span class="input-group-text">
 						<i class="fa fa-user"></i>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="lastName" placeholder="Last name" required="required">
-			</div>
+					</span>
+                </div>
+                <input type="text" class="form-control" name="lastName" placeholder="Last name" required="required">
+            </div>
         </div>
 
         <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
+            <div class="input-group">
+                <div class="input-group-prepend">
 					<span class="input-group-text">
 						<i class="fa fa-envelope"></i>
-					</span>                    
-				</div>
-				<input type="email" class="form-control" name="email" placeholder="Email" required="required">
-			</div>
+					</span>
+                </div>
+                <input type="email" class="form-control" name="email" placeholder="Email" required="required">
+            </div>
         </div>
 
         <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
+            <div class="input-group">
+                <div class="input-group-prepend">
 					<span class="input-group-text">
 						<i class="fa fa-phone"></i>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="tel" placeholder="Phone number" required="required">
-			</div>
+					</span>
+                </div>
+                <input type="text" class="form-control" name="tel" placeholder="Phone number" required="required">
+            </div>
         </div>
 
         <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
+            <div class="input-group">
+                <div class="input-group-prepend">
 					<span class="input-group-text">
 						<i class="bi bi-signpost-fill"></i>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="city" placeholder="City" required="required">
-			</div>
+					</span>
+                </div>
+                <input type="text" class="form-control" name="city" placeholder="City" required="required">
+            </div>
         </div>
 
         <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
+            <div class="input-group">
+                <div class="input-group-prepend">
 					<span class="input-group-text">
 						<i class="bi bi-signpost-fill"></i>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="district" placeholder="District" required="required">
-			</div>
+					</span>
+                </div>
+                <input type="text" class="form-control" name="district" placeholder="District" required="required">
+            </div>
         </div>
 
         <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
+            <div class="input-group">
+                <div class="input-group-prepend">
 					<span class="input-group-text">
 						<i class="bi bi-signpost-fill"></i>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="ward" placeholder="Ward" required="required">
-			</div>
+					</span>
+                </div>
+                <input type="text" class="form-control" name="ward" placeholder="Ward" required="required">
+            </div>
         </div>
 
         <div class="form-group">
-			<div class="input-group">
-				<div class="input-group-prepend">
+            <div class="input-group">
+                <div class="input-group-prepend">
 					<span class="input-group-text">
 						<i class="bi bi-signpost"></i>
-					</span>                    
-				</div>
-				<input type="text" class="form-control" name="description" placeholder="Address description" required="required">
-			</div>
+					</span>
+                </div>
+                <input type="text" class="form-control" name="description" placeholder="Address description"
+                       required="required">
+            </div>
         </div>
 
         <div class="form-group">
-			<label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
-		</div>
-		<div class="form-group">
+            <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms
+                of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+        </div>
+        <div class="form-group">
             <input type="submit" class="btn btn-primary btn-lg" value="Sign Up">
         </div>
     </form>
-	<div class="text-center">Already have an account? <a href="../login">Login here</a></div>
+    <div class="text-center">Already have an account? <a href="../login">Login here</a></div>
 </div>
 </body>
 
@@ -236,5 +238,6 @@
         font-size: 7px;
         position: absolute;
     }
+
 </style>
 </html>
