--- a/register/templates/admin/add_product.html
+++ b/register/templates/admin/add_product.html
@@ -65,25 +65,26 @@
 <div class="main">
     <div class="container">
         <h1>Add product</h1>
-        <form>
+        <form method="post">
+            {% csrf_token %}
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputEmail4">Product's name</label>
-                    <input type="text" class="form-control" id="inputEmail4" placeholder="Name">
+                    <input type="text" class="form-control" id="inputEmail4" placeholder="Name" name="product_name" required="required">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputPassword4">Quantity</label>
-                    <input type="number" class="form-control" id="inputPassword4" placeholder="quantity">
+                    <input type="number" class="form-control" id="inputPassword4" placeholder="quantity" name="quantity" required="required">
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputCity">Image link</label>
-                    <input type="text" class="form-control" id="inputCity">
+                    <input type="text" class="form-control" id="inputCity" name="image_url" required="required">
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputState">Type</label>
-                    <select id="inputState" class="form-control">
+                    <select id="inputState" class="form-control" name="product_type">
                         <option selected>Book</option>
                         <option>Electronic</option>
                         <option>Clothes</option>
@@ -91,18 +92,18 @@
                 </div>
                 <div class="form-group col-md-2">
                     <label for="inputZip">Price</label>
-                    <input type="number" class="form-control" id="inputZip">
+                    <input type="number" class="form-control" id="inputZip" name="price" required="required">
                 </div>
             </div>
             <div class="form-group">
                 <div class="form-check" style="font-size: 15px;">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <input class="form-check-input" type="checkbox" id="gridCheck" name="publicCheck">
                     <label class="form-check-label" for="gridCheck">
                         public product
                     </label>
                 </div>
             </div>
-            <button type="submit" class="btn btn-secondary">Add product</button>
+            <input type="submit" class="btn btn-secondary" value="Add product">
         </form>
     </div>
 </div>
