--- a/register/templates/customer/index.html
+++ b/register/templates/customer/index.html
@@ -24,13 +24,48 @@
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <a class="btn btn-outline-success my-2 my-sm-0" href="../login" role="button" style="margin: 10px;">Log in</a>
-              <a class="btn btn-outline-success my-2 my-sm-0" href="../register" role="button">Register</a>
+            <a class="btn btn-outline-primary my-2 my-sm-0" href="../register" role="button">My Cart</a>
+            <a class="btn btn-outline-danger my-2 my-sm-0" href="../login" role="button" style="margin: 10px;">Log out</a>
           </form>
         </div>
       </nav>
-      <img src="https://www.apsfulfillment.com/wp-content/uploads/2017/10/order-fulfillment-service-for-ecommerce.jpg" class="img-fluid"  style="width: 100%; height: fit-content;">
-
+      <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="section-title">
+                <h2>Danh sách sản phẩm</h2>
+              </div>
+              <div class="featured__controls">
+                <ul>
+                  <button class="btn active" onclick="filterSelection('all')">All</button>
+                  <button class="btn" onclick="filterSelection('lk')">Book</button>
+                  <button class="btn" onclick="filterSelection('pk')">Electronic</button>
+                  <button class="btn" onclick="filterSelection('pk')">Clothes</button>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- list san pham -->
+          <div class="row">
+            {% for product in products %}
+            <div class="col-lg-3 col-md-4 col-sm-6 filterDiv lk" >
+              <div class="card" id="xitem" style="margin: 5px;" >
+                <img class="card-img-top" src="{{product.image}}" style="height: 20rem;"
+                  alt="Card image cap">
+                <div class="card-body">
+                  <div class="featured__item ">
+                    <div class="featured__item__text" style="height: 100px;">
+                      <h6><a href="#">{{product.product_name}}</a></h6>
+                      <h5>{{product.price}} VNĐ</h5>
+                    </div>
+                    <a href="#">Add to cart</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+          </div>
+      </div>
     <footer class="footer">
         <div>
             <div class="footer-copyright text-center py-3" id="footer" >
