--- a/register/templates/customer/index.html
+++ b/register/templates/customer/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Long Commerce</a>
+        <a class="navbar-brand" href="../homepage">Long Commerce</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="../homepage">Home <span class="sr-only">(current)</span></a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -58,7 +58,7 @@
                       <h6><a href="#">{{product.product_name}}</a></h6>
                       <h5>{{product.price}} VNĐ</h5>
                     </div>
-                    <a href="#">Add to cart</a>
+                    <a href="/addtocart/{{ product.id }}">Add to cart</a>
                   </div>
                 </div>
               </div>
