--- a/register/templates/customer/index.html
+++ b/register/templates/customer/index.html
@@ -24,7 +24,7 @@
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <a class="btn btn-outline-primary my-2 my-sm-0" href="../register" role="button">My Cart</a>
+            <a class="btn btn-outline-primary my-2 my-sm-0" href="../cart" role="button">My Cart</a>
             <a class="btn btn-outline-danger my-2 my-sm-0" href="../login" role="button" style="margin: 10px;">Log out</a>
           </form>
         </div>
