update confirm order

--- a/register/templates/customer/cart.html
+++ b/register/templates/customer/cart.html
@@ -272,7 +272,7 @@
                             <ul>
                                 <li>Thành tiền: <span>{{mycart.price}} đ</span></li>
                             </ul>
-                            <a href="xacnhan.html" class="btn btn-primary btn-lg btn-block " role="button">XÁC NHẬN HÓA ĐƠN</a>
+                            <a href="/confirm" class="btn btn-primary btn-lg btn-block " role="button">XÁC NHẬN HÓA ĐƠN</a>
                         </div>
                     </div>
                 </div>
