--- a/register/templates/customer/cart.html
+++ b/register/templates/customer/cart.html
@@ -205,6 +205,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="../homepage">Home <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="../order">My Order <span class="sr-only">(current)</span></a>
+              </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <a class="btn btn-outline-primary my-2 my-sm-0" href="../cart" role="button">My Cart</a>
