--- a/register/templates/customer/orderdetail.html
+++ b/register/templates/customer/orderdetail.html
@@ -269,7 +269,8 @@
                                 <hr>
                                 <div class="checkout__order__total">Tổng tiền <span>{{order.price}} đ</span></div>
                                 <hr>
-                                <h6><a href="/orderdetail/{{ order.id }}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Đánh giá sản phẩm</a></h6>
+                                <h6><a href="/orderdetail/{{ order.id }}" class="btn btn-primary btn-lg active"
+                                        role="button" aria-pressed="true">Đánh giá sản phẩm</a></h6>
                             </div>
                         </div>
                     </div>
