--- a/register/templates/admin/admin.html
+++ b/register/templates/admin/admin.html
@@ -1,63 +1,72 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-          font-family: "Lato", sans-serif;
-        }
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      font-family: "Lato", sans-serif;
+    }
 
-        .sidenav {
-          height: 100%;
-          width: 160px;
-          position: fixed;
-          z-index: 1;
-          top: 0;
-          left: 0;
-          background-color: #111;
-          overflow-x: hidden;
-          padding-top: 20px;
-        }
+    .sidenav {
+      height: 100%;
+      width: 160px;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      background-color: #111;
+      overflow-x: hidden;
+      padding-top: 20px;
+    }
 
-        .sidenav a {
-          padding: 6px 8px 6px 16px;
-          text-decoration: none;
-          font-size: 25px;
-          color: #818181;
-          display: block;
-        }
+    .sidenav a {
+      padding: 6px 8px 6px 16px;
+      text-decoration: none;
+      font-size: 25px;
+      color: #818181;
+      display: block;
+    }
 
-        .sidenav a:hover {
-          color: #f1f1f1;
-        }
+    .sidenav a:hover {
+      color: #f1f1f1;
+    }
 
-        .main {
-          margin-left: 160px; /* Same as the width of the sidenav */
-          font-size: 28px; /* Increased text to enable scrolling */
-          padding: 0px 10px;
-        }
+    .main {
+      margin-left: 160px;
+      /* Same as the width of the sidenav */
+      font-size: 28px;
+      /* Increased text to enable scrolling */
+      padding: 0px 10px;
+    }
 
-        @media screen and (max-height: 450px) {
-          .sidenav {padding-top: 15px;}
-          .sidenav a {font-size: 18px;}
-        }
+    @media screen and (max-height: 450px) {
+      .sidenav {
+        padding-top: 15px;
+      }
 
-    </style>
-    <title>Employee home page</title>
+      .sidenav a {
+        font-size: 18px;
+      }
+    }
+  </style>
+  <title>Employee home page</title>
 </head>
+
 <body>
 
-<div class="sidenav">
+  <div class="sidenav">
     <a href="../employee">Home</a>
     <a href="product">Product</a>
     <a href="#clients">Order</a>
-    <a href="#contact">Analysis</a>
-</div>
+    <a href="../login">Log out</a>
+  </div>
 
-<div class="main">
+  <div class="main">
     <h1>Welcome back {{employee.name}}</h1>
 
-</div>
+  </div>
 
 </body>
-</html> 
+
+</html>
