--- a/register/templates/customer/cart.html
+++ b/register/templates/customer/cart.html
@@ -1,221 +1,228 @@
 <!doctype html>
 <html lang="en">
-  <head>
-      <style>
-          .shoping__checkout {
-	background: #f5f5f5;
-	padding: 30px;
-	padding-top: 20px;
-	margin-top: 50px;
-}
 
-.shoping__checkout h5 {
-	color: #1c1c1c;
-	font-weight: 700;
-	font-size: 20px;
-	margin-bottom: 28px;
-}
+<head>
+    <style>
+        .shoping__checkout {
+            background: #f5f5f5;
+            padding: 30px;
+            padding-top: 20px;
+            margin-top: 50px;
+        }
 
-.shoping__checkout ul {
-	margin-bottom: 28px;
-}
+        .shoping__checkout h5 {
+            color: #1c1c1c;
+            font-weight: 700;
+            font-size: 20px;
+            margin-bottom: 28px;
+        }
 
-.shoping__checkout ul li {
-	font-size: 16px;
-	color: #1c1c1c;
-	font-weight: 700;
-	list-style: none;
-	overflow: hidden;
-	border-bottom: 1px solid #ebebeb;
-	padding-bottom: 13px;
-	margin-bottom: 18px;
-}
+        .shoping__checkout ul {
+            margin-bottom: 28px;
+        }
 
-.shoping__checkout ul li:last-child {
-	padding-bottom: 0;
-	border-bottom: none;
-	margin-bottom: 0;
-}
+        .shoping__checkout ul li {
+            font-size: 16px;
+            color: #1c1c1c;
+            font-weight: 700;
+            list-style: none;
+            overflow: hidden;
+            border-bottom: 1px solid #ebebeb;
+            padding-bottom: 13px;
+            margin-bottom: 18px;
+        }
 
-.shoping__checkout ul li span {
-	font-size: 18px;
-	color: #dd2222;
-	float: right;
-}
+        .shoping__checkout ul li:last-child {
+            padding-bottom: 0;
+            border-bottom: none;
+            margin-bottom: 0;
+        }
 
-.shoping__checkout .primary-btn {
-	display: block;
-	text-align: center;
-}
+        .shoping__checkout ul li span {
+            font-size: 18px;
+            color: #dd2222;
+            float: right;
+        }
 
-.shoping-cart {
-	padding-top: 80px;
-	padding-bottom: 80px;
-}
+        .shoping__checkout .primary-btn {
+            display: block;
+            text-align: center;
+        }
 
-.shoping__cart__table {
-	margin-bottom: 30px;
-}
+        .shoping-cart {
+            padding-top: 80px;
+            padding-bottom: 80px;
+        }
 
-.shoping__cart__table table {
-	width: 100%;
-	text-align: center;
-}
+        .shoping__cart__table {
+            margin-bottom: 30px;
+        }
 
-.shoping__cart__table table thead tr {
-	border-bottom: 1px solid #ebebeb;
-}
+        .shoping__cart__table table {
+            width: 100%;
+            text-align: center;
+        }
 
-.shoping__cart__table table thead th {
-	font-size: 20px;
-	font-weight: 700;
-	color: #1c1c1c;
-	padding-bottom: 20px;
-}
+        .shoping__cart__table table thead tr {
+            border-bottom: 1px solid #ebebeb;
+        }
 
-.shoping__cart__table table thead th.shoping__product {
-	text-align: left;
-}
+        .shoping__cart__table table thead th {
+            font-size: 20px;
+            font-weight: 700;
+            color: #1c1c1c;
+            padding-bottom: 20px;
+        }
 
-.shoping__cart__table table tbody tr td {
-	padding-top: 30px;
-	padding-bottom: 30px;
-	border-bottom: 1px solid #ebebeb;
-}
+        .shoping__cart__table table thead th.shoping__product {
+            text-align: left;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__item {
-	width: 630px;
-	text-align: left;
-}
+        .shoping__cart__table table tbody tr td {
+            padding-top: 30px;
+            padding-bottom: 30px;
+            border-bottom: 1px solid #ebebeb;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__item img {
-	display: inline-block;
-	margin-right: 25px;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__item {
+            width: 630px;
+            text-align: left;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__item h5 {
-	color: #1c1c1c;
-	display: inline-block;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__item img {
+            display: inline-block;
+            margin-right: 25px;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__price {
-	font-size: 18px;
-	color: #1c1c1c;
-	font-weight: 700;
-	width: 100px;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__item h5 {
+            color: #1c1c1c;
+            display: inline-block;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__total {
-	font-size: 18px;
-	color: #1c1c1c;
-	font-weight: 700;
-	width: 110px;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__price {
+            font-size: 18px;
+            color: #1c1c1c;
+            font-weight: 700;
+            width: 100px;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__item__close {
-	text-align: right;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__total {
+            font-size: 18px;
+            color: #1c1c1c;
+            font-weight: 700;
+            width: 110px;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__item__close span {
-	font-size: 24px;
-	color: #b2b2b2;
-	cursor: pointer;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__item__close {
+            text-align: right;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__quantity {
-	width: 225px;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__item__close span {
+            font-size: 24px;
+            color: #b2b2b2;
+            cursor: pointer;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty {
-	width: 120px;
-	height: 40px;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__quantity {
+            width: 225px;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty input {
-	color: #1c1c1c;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty {
+            width: 120px;
+            height: 40px;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty input::placeholder {
-	color: #1c1c1c;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty input {
+            color: #1c1c1c;
+        }
 
-.shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty .qtybtn {
-	width: 15px;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty input::placeholder {
+            color: #1c1c1c;
+        }
 
-.primary-btn.cart-btn {
-	color: #6f6f6f;
-	padding: 14px 30px 12px;
-	background: #f5f5f5;
-}
+        .shoping__cart__table table tbody tr td.shoping__cart__quantity .pro-qty .qtybtn {
+            width: 15px;
+        }
 
-.primary-btn.cart-btn span {
-	font-size: 14px;
-}
+        .primary-btn.cart-btn {
+            color: #6f6f6f;
+            padding: 14px 30px 12px;
+            background: #f5f5f5;
+        }
 
-.primary-btn.cart-btn.cart-btn-right {
-	float: right;
-}
-.pro-qty {
-	width: 140px;
-	height: 50px;
-	display: inline-block;
-	position: relative;
-	text-align: center;
-	background: #f5f5f5;
-	margin-bottom: 5px;
-}
+        .primary-btn.cart-btn span {
+            font-size: 14px;
+        }
 
-.pro-qty input {
-	height: 100%;
-	width: 100%;
-	font-size: 16px;
-	color: #6f6f6f;
-	width: 50px;
-	border: none;
-	background: #f5f5f5;
-	text-align: center;
-}
-.pro-qty .qtybtn {
-	width: 35px;
-	font-size: 16px;
-	color: #6f6f6f;
-	cursor: pointer;
-	display: inline-block;
-}
-      </style>
+        .primary-btn.cart-btn.cart-btn-right {
+            float: right;
+        }
+
+        .pro-qty {
+            width: 140px;
+            height: 50px;
+            display: inline-block;
+            position: relative;
+            text-align: center;
+            background: #f5f5f5;
+            margin-bottom: 5px;
+        }
+
+        .pro-qty input {
+            height: 100%;
+            width: 100%;
+            font-size: 16px;
+            color: #6f6f6f;
+            width: 50px;
+            border: none;
+            background: #f5f5f5;
+            text-align: center;
+        }
+
+        .pro-qty .qtybtn {
+            width: 35px;
+            font-size: 16px;
+            color: #6f6f6f;
+            cursor: pointer;
+            display: inline-block;
+        }
+    </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Long Commerce</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="../homepage">Long Commerce</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="../homepage">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="../order">My Order <span class="sr-only">(current)</span></a>
-              </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <a class="btn btn-outline-primary my-2 my-sm-0" href="../cart" role="button">My Cart</a>
-            <a class="btn btn-outline-danger my-2 my-sm-0" href="../login" role="button" style="margin: 10px;">Log out</a>
-          </form>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="../homepage">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="../order">My Order <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <a class="btn btn-outline-primary my-2 my-sm-0" href="../cart" role="button">My Cart</a>
+                <a class="btn btn-outline-danger my-2 my-sm-0" href="../login" role="button" style="margin: 10px;">Log
+                    out</a>
+            </form>
         </div>
-      </nav>
-      <div class="container">
+    </nav>
+    <div class="container">
         <section style="padding-top: 4rem;">
             <div class="container" style="background-color: #fff;">
                 <div class="row">
@@ -275,25 +282,33 @@
                             <ul>
                                 <li>Thành tiền: <span>{{mycart.price}} đ</span></li>
                             </ul>
-                            <a href="/confirm" class="btn btn-primary btn-lg btn-block " role="button">XÁC NHẬN HÓA ĐƠN</a>
+                            <a href="/confirm" class="btn btn-primary btn-lg btn-block " role="button">XÁC NHẬN HÓA
+                                ĐƠN</a>
                         </div>
                     </div>
                 </div>
             </div>
-            </div>
-        </section>
-      </div>
+    </div>
+    </section>
+    </div>
     <footer class="footer">
         <div>
-            <div class="footer-copyright text-center py-3" id="footer" >
-                <a >© 2021 Copyright: LTLong</a>
-              </div>
+            <div class="footer-copyright text-center py-3" id="footer">
+                <a>© 2021 Copyright: LTLong</a>
+            </div>
         </div>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
