--- a/register/templates/customer/index.html
+++ b/register/templates/customer/index.html
@@ -1,85 +1,95 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Long Commerce</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="../homepage">Long Commerce</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="../homepage">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="../order">My Order <span class="sr-only">(current)</span></a>
-            </li>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <title>Long Commerce</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="../homepage">Long Commerce</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="../homepage">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="../order">My Order <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <a class="btn btn-outline-primary my-2 my-sm-0" href="../cart" role="button">My Cart</a>
+        <a class="btn btn-outline-danger my-2 my-sm-0" href="../login" role="button" style="margin: 10px;">Log out</a>
+      </form>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-title">
+          <h2>Danh sách sản phẩm</h2>
+        </div>
+        <div class="featured__controls">
+          <ul>
+            <button class="btn active" onclick="filterSelection('all')">All</button>
+            <button class="btn" onclick="filterSelection('lk')">Book</button>
+            <button class="btn" onclick="filterSelection('pk')">Electronic</button>
+            <button class="btn" onclick="filterSelection('pk')">Clothes</button>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <a class="btn btn-outline-primary my-2 my-sm-0" href="../cart" role="button">My Cart</a>
-            <a class="btn btn-outline-danger my-2 my-sm-0" href="../login" role="button" style="margin: 10px;">Log out</a>
-          </form>
         </div>
-      </nav>
-      <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="section-title">
-                <h2>Danh sách sản phẩm</h2>
-              </div>
-              <div class="featured__controls">
-                <ul>
-                  <button class="btn active" onclick="filterSelection('all')">All</button>
-                  <button class="btn" onclick="filterSelection('lk')">Book</button>
-                  <button class="btn" onclick="filterSelection('pk')">Electronic</button>
-                  <button class="btn" onclick="filterSelection('pk')">Clothes</button>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- list san pham -->
-          <div class="row">
-            {% for product in products %}
-            <div class="col-lg-3 col-md-4 col-sm-6 filterDiv lk" >
-              <div class="card" id="xitem" style="margin: 5px;" >
-                <img class="card-img-top" src="{{product.image}}" style="height: 20rem;"
-                  alt="Card image cap">
-                <div class="card-body">
-                  <div class="featured__item ">
-                    <div class="featured__item__text" style="height: 100px;">
-                      <h6><a href="#">{{product.product_name}}</a></h6>
-                      <h5>{{product.price}} VNĐ</h5>
-                    </div>
-                    <a href="/addtocart/{{ product.id }}">Add to cart</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            {% endfor %}
-          </div>
       </div>
-    <footer class="footer">
-        <div>
-            <div class="footer-copyright text-center py-3" id="footer" >
-                <a >© 2021 Copyright: LTLong</a>
+    </div>
+    <!-- list san pham -->
+    <div class="row">
+      {% for product in products %}
+      <div class="col-lg-3 col-md-4 col-sm-6 filterDiv lk">
+        <div class="card" id="xitem" style="margin: 5px;">
+          <img class="card-img-top" src="{{product.image}}" style="height: 20rem;" alt="Card image cap">
+          <div class="card-body">
+            <div class="featured__item ">
+              <div class="featured__item__text" style="height: 100px;">
+                <h6><a href="#">{{product.product_name}}</a></h6>
+                <h5>{{product.price}} VNĐ</h5>
               </div>
+              <a href="/addtocart/{{ product.id }}">Add to cart</a>
+            </div>
+          </div>
         </div>
-    </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+  <footer class="footer">
+    <div>
+      <div class="footer-copyright text-center py-3" id="footer">
+        <a>© 2021 Copyright: LTLong</a>
+      </div>
+    </div>
+  </footer>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
