--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,142 +13,146 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 </head>
+
 <body>
-<div class="signup-form">
-    <form method="post">
-        {% csrf_token %}
-        <h2>Sign Up</h2>
-        <p>Please fill in this form to create an account!</p>
-        <hr>
-        {% if messages %}
-        {% for result in messages %}
-        <div class="alert alert-primary" role="alert">
-            Register Success!!!
-        </div>
-        {% endfor %}
-        {% endif %}
-
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-prepend">
-					<span class="input-group-text">
-						<span class="fa fa-user"></span>
-					</span>
-                </div>
-                <input type="text" class="form-control" name="username" placeholder="Username" required="required">
+    <div class="signup-form">
+        <form method="post">
+            {% csrf_token %}
+            <h2>Sign Up</h2>
+            <p>Please fill in this form to create an account!</p>
+            <hr>
+            {% if messages %}
+            {% for result in messages %}
+            <div class="alert alert-primary" role="alert">
+                Register Success!!!
             </div>
-        </div>
+            {% endfor %}
+            {% endif %}
 
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="fa fa-lock"></i>
-					</span>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <span class="fa fa-user"></span>
+                        </span>
+                    </div>
+                    <input type="text" class="form-control" name="username" placeholder="Username" required="required">
                 </div>
-                <input type="password" class="form-control" name="password" placeholder="Password" required="required">
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="fa fa-user"></i>
-					</span>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-lock"></i>
+                        </span>
+                    </div>
+                    <input type="password" class="form-control" name="password" placeholder="Password"
+                        required="required">
                 </div>
-                <input type="text" class="form-control" name="firstName" placeholder="First name" required="required">
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="fa fa-user"></i>
-					</span>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-user"></i>
+                        </span>
+                    </div>
+                    <input type="text" class="form-control" name="firstName" placeholder="First name"
+                        required="required">
                 </div>
-                <input type="text" class="form-control" name="lastName" placeholder="Last name" required="required">
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="fa fa-envelope"></i>
-					</span>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-user"></i>
+                        </span>
+                    </div>
+                    <input type="text" class="form-control" name="lastName" placeholder="Last name" required="required">
                 </div>
-                <input type="email" class="form-control" name="email" placeholder="Email" required="required">
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="fa fa-phone"></i>
-					</span>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-envelope"></i>
+                        </span>
+                    </div>
+                    <input type="email" class="form-control" name="email" placeholder="Email" required="required">
                 </div>
-                <input type="text" class="form-control" name="tel" placeholder="Phone number" required="required">
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="bi bi-signpost-fill"></i>
-					</span>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-phone"></i>
+                        </span>
+                    </div>
+                    <input type="text" class="form-control" name="tel" placeholder="Phone number" required="required">
                 </div>
-                <input type="text" class="form-control" name="city" placeholder="City" required="required">
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="bi bi-signpost-fill"></i>
-					</span>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="bi bi-signpost-fill"></i>
+                        </span>
+                    </div>
+                    <input type="text" class="form-control" name="city" placeholder="City" required="required">
                 </div>
-                <input type="text" class="form-control" name="district" placeholder="District" required="required">
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="bi bi-signpost-fill"></i>
-					</span>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="bi bi-signpost-fill"></i>
+                        </span>
+                    </div>
+                    <input type="text" class="form-control" name="district" placeholder="District" required="required">
                 </div>
-                <input type="text" class="form-control" name="ward" placeholder="Ward" required="required">
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-prepend">
-					<span class="input-group-text">
-						<i class="bi bi-signpost"></i>
-					</span>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="bi bi-signpost-fill"></i>
+                        </span>
+                    </div>
+                    <input type="text" class="form-control" name="ward" placeholder="Ward" required="required">
                 </div>
-                <input type="text" class="form-control" name="description" placeholder="Address description"
-                       required="required">
             </div>
-        </div>
 
-        <div class="form-group">
-            <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms
-                of Use</a> &amp; <a href="#">Privacy Policy</a></label>
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary btn-lg" value="Sign Up">
-        </div>
-    </form>
-    <div class="text-center">Already have an account? <a href="../login">Login here</a></div>
-</div>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="bi bi-signpost"></i>
+                        </span>
+                    </div>
+                    <input type="text" class="form-control" name="description" placeholder="Address description"
+                        required="required">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a
+                        href="#">Terms
+                        of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary btn-lg" value="Sign Up">
+            </div>
+        </form>
+        <div class="text-center">Already have an account? <a href="../login">Login here</a></div>
+    </div>
 </body>
 
 <style>
@@ -156,20 +161,28 @@
         background: #19aa8d;
         font-family: 'Roboto', sans-serif;
     }
+
     .form-control {
         font-size: 15px;
     }
-    .form-control, .form-control:focus, .input-group-text {
+
+    .form-control,
+    .form-control:focus,
+    .input-group-text {
         border-color: #e1e1e1;
     }
-    .form-control, .btn {        
+
+    .form-control,
+    .btn {
         border-radius: 3px;
     }
+
     .signup-form {
         width: 400px;
         margin: 0 auto;
-        padding: 30px 0;		
+        padding: 30px 0;
     }
+
     .signup-form form {
         color: #999;
         border-radius: 3px;
@@ -178,59 +191,76 @@
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
         padding: 30px;
     }
+
     .signup-form h2 {
         color: #333;
         font-weight: bold;
         margin-top: 0;
     }
+
     .signup-form hr {
         margin: 0 -30px 20px;
     }
+
     .signup-form .form-group {
         margin-bottom: 20px;
     }
+
     .signup-form label {
         font-weight: normal;
         font-size: 15px;
     }
+
     .signup-form .form-control {
         min-height: 38px;
         box-shadow: none !important;
-    }	
+    }
+
     .signup-form .input-group-addon {
         max-width: 42px;
         text-align: center;
-    }	
-    .signup-form .btn, .signup-form .btn:active {        
+    }
+
+    .signup-form .btn,
+    .signup-form .btn:active {
         font-size: 16px;
         font-weight: bold;
         background: #19aa8d !important;
         border: none;
         min-width: 140px;
     }
-    .signup-form .btn:hover, .signup-form .btn:focus {
+
+    .signup-form .btn:hover,
+    .signup-form .btn:focus {
         background: #179b81 !important;
     }
+
     .signup-form a {
-        color: #fff;	
+        color: #fff;
         text-decoration: underline;
     }
+
     .signup-form a:hover {
         text-decoration: none;
     }
+
     .signup-form form a {
         color: #19aa8d;
         text-decoration: none;
-    }	
+    }
+
     .signup-form form a:hover {
         text-decoration: underline;
     }
+
     .signup-form .fa {
         font-size: 21px;
     }
+
     .signup-form .fa-paper-plane {
         font-size: 18px;
     }
+
     .signup-form .fa-check {
         color: #fff;
         left: 17px;
@@ -238,6 +268,6 @@
         font-size: 7px;
         position: absolute;
     }
-
 </style>
+
 </html>
