update  order process

--- a/register/templates/admin/adminorder.html
+++ b/register/templates/admin/adminorder.html
@@ -99,7 +99,7 @@
                         <th scope="row">{{order.id}}</th>
                         <td>{{order.status}}</td>
                         <td>{{order.price}}</td>
-                        <td><a href="/orderdetail/{{ order.id }}">Chi tiết</a></td>
+                        <td><a href="orderprocess/{{ order.id }}">Chi tiết</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
