--- a/register/templates/admin/admin.html
+++ b/register/templates/admin/admin.html
@@ -58,7 +58,7 @@
   <div class="sidenav">
     <a href="../employee">Home</a>
     <a href="product">Product</a>
-    <a href="#clients">Order</a>
+    <a href="order">Order</a>
     <a href="../login">Log out</a>
   </div>
 
