--- a/register/templates/admin/product.html
+++ b/register/templates/admin/product.html
@@ -93,8 +93,8 @@
           <td>{{product.price}}</td>
           <td>{{product.product_type}}</td>
           <td>{{product.quantity}}</td>
-          <td>edit</td>
-          <td>delete</td>
+          <td><a href="#">Edit</a></td>
+          <td><a href="#">Delete</a></td>
         </tr>
         {% endfor %}
       </tbody>
