update rating and comment

--- a/register/templates/admin/adminorder.html
+++ b/register/templates/admin/adminorder.html
@@ -77,7 +77,7 @@
                         <ul>
                             <button class="btn active" onclick="filterSelection('all')">All</button>
                             <button class="btn" onclick="filterSelection('lk')">Chờ xác nhận</button>
-                            <button class="btn" onclick="filterSelection('pk')">Đang xử ý</button>
+                            <button class="btn" onclick="filterSelection('pk')">Đang xử lý</button>
                             <button class="btn" onclick="filterSelection('pk')">Đã hoàn thành</button>
                         </ul>
                     </div>
