--- a/register/templates/customer/rating.html
+++ b/register/templates/customer/rating.html
@@ -2,6 +2,208 @@
 <html lang="en">
 
 <head>
+  <style>
+    .checkout {
+      padding-top: 80px;
+      padding-bottom: 60px;
+    }
+
+    .checkout h6 {
+      color: #999999;
+      text-align: center;
+      background: #f5f5f5;
+      border-top: 1px solid #6AB963;
+      padding: 12px 0 12px;
+      margin-bottom: 75px;
+    }
+
+    .checkout h6 span {
+      font-size: 16px;
+      color: #6AB963;
+      margin-right: 5px;
+    }
+
+    .checkout h6 a {
+      text-decoration: underline;
+      color: #999999;
+    }
+
+    .checkout__form h4 {
+      color: #1c1c1c;
+      font-weight: 700;
+      border-bottom: 1px solid #e1e1e1;
+      padding-bottom: 20px;
+      margin-bottom: 25px;
+    }
+
+    .checkout__form p {
+      column-rule: #b2b2b2;
+    }
+
+    .checkout__input {
+      margin-bottom: 24px;
+    }
+
+    .checkout__input p {
+      color: #1c1c1c;
+      margin-bottom: 20px;
+    }
+
+    .checkout__input p span {
+      color: #dd2222;
+    }
+
+    .checkout__input input {
+      width: 100%;
+      height: 46px;
+      border: 1px solid #ebebeb;
+      padding-left: 20px;
+      font-size: 16px;
+      color: #b2b2b2;
+      border-radius: 4px;
+    }
+
+    .checkout__input input.checkout__input__add {
+      margin-bottom: 20px;
+    }
+
+    .checkout__input input::placeholder {
+      color: #b2b2b2;
+    }
+
+    .checkout__input__checkbox {
+      margin-bottom: 10px;
+    }
+
+    .checkout__input__checkbox label {
+      position: relative;
+      font-size: 16px;
+      color: #1c1c1c;
+      padding-left: 40px;
+      cursor: pointer;
+    }
+
+    .checkout__input__checkbox label input {
+      position: absolute;
+      visibility: hidden;
+    }
+
+    .checkout__input__checkbox label input:checked~.checkmark {
+      background: #7fad39;
+      border-color: #7fad39;
+    }
+
+    .checkout__input__checkbox label input:checked~.checkmark:after {
+      opacity: 1;
+    }
+
+    .checkout__input__checkbox label .checkmark {
+      position: absolute;
+      left: 0;
+      top: 4px;
+      height: 16px;
+      width: 14px;
+      border: 1px solid #a6a6a6;
+      content: "";
+      border-radius: 4px;
+    }
+
+    .checkout__input__checkbox label .checkmark:after {
+      position: absolute;
+      left: 1px;
+      top: 1px;
+      width: 10px;
+      height: 8px;
+      border: solid white;
+      border-width: 3px 3px 0px 0px;
+      -webkit-transform: rotate(127deg);
+      -ms-transform: rotate(127deg);
+      transform: rotate(127deg);
+      content: "";
+      opacity: 0;
+    }
+
+    .checkout__order {
+      background: #ffffff;
+      padding: 40px;
+      padding-top: 30px;
+    }
+
+    .checkout__order h4 {
+      color: #1c1c1c;
+      font-weight: 700;
+      border-bottom: 1px solid #e1e1e1;
+      padding-bottom: 20px;
+      margin-bottom: 20px;
+    }
+
+    .checkout__order .checkout__order__products {
+      font-size: 18px;
+      color: #1c1c1c;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+
+    .checkout__order .checkout__order__products span {
+      float: right;
+    }
+
+    .checkout__order ul {
+      margin-bottom: 12px;
+    }
+
+    .checkout__order ul li {
+      font-size: 16px;
+      color: #000000;
+      line-height: 40px;
+      list-style: none;
+    }
+
+    .checkout__order ul li span {
+      font-weight: 700;
+      float: right;
+    }
+
+    .checkout__order .checkout__order__subtotal {
+      font-size: 18px;
+      color: #1c1c1c;
+      font-weight: 700;
+      border-bottom: 1px solid #e1e1e1;
+      border-top: 1px solid #e1e1e1;
+      padding-bottom: 15px;
+      margin-bottom: 15px;
+      padding-top: 15px;
+    }
+
+    .checkout__order .checkout__order__subtotal span {
+      float: right;
+    }
+
+    .checkout__order .checkout__input__checkbox label {
+      padding-left: 20px;
+    }
+
+    .checkout__order .checkout__order__total {
+      font-size: 18px;
+      color: #1c1c1c;
+      font-weight: 700;
+      border-bottom: 1px solid #e1e1e1;
+      padding-bottom: 15px;
+      margin-bottom: 25px;
+    }
+
+    .checkout__order .checkout__order__total span {
+      float: right;
+      color: #dd2222;
+    }
+
+    #button {
+      font-size: 18px;
+      letter-spacing: 2px;
+      width: 100%;
+      margin-top: 10px;
+    }
+  </style>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -37,19 +239,47 @@
     </div>
   </nav>
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="section-title">
-          <h2>Danh sách sản phẩm</h2>
-        </div>
-        <div class="featured__controls">
-          <ul>
-            <button class="btn active" onclick="filterSelection('all')">All</button>
-            <button class="btn" onclick="filterSelection('lk')">Book</button>
-            <button class="btn" onclick="filterSelection('pk')">Electronic</button>
-            <button class="btn" onclick="filterSelection('pk')">Clothes</button>
-          </ul>
-        </div>
+    <div class="checkout__form card">
+      <div class="card-header" style="background-color: #fff; text-align: center;">
+        <h3>Chi tiết hóa đơn</h3>
+      </div>
+      <div class="card-body">
+        <form method="post">
+          {% csrf_token %}
+          <div class="row">
+
+            <div class="col-lg-12 col-md-6">
+              <div class="checkout__order">
+                <h4>Đơn hàng của bạn</h4>
+                <div class="checkout__order__products">Sản phẩm <span>Giá</span></div>
+                <ul>
+                  {% for item in items %}
+                  <li>{{item.productid.product_name}}<span>{{item.price}} đ</span></li>
+                  <div class="form-row">
+                    <div class="form-group col-md-8">
+                      <label for="inputCity">Nhận xét</label>
+                      <input type="text" class="form-control" id="inputCity" name="{{item.id}}comment">
+                    </div>
+                    <div class="form-group col-md-4">
+                      <label for="inputState">Đánh Giá</label>
+                      <select id="inputState" class="form-control" name="{{item.id}}rating">
+                        <option value="5" selected>5 sao</option>
+                        <option value="4">4 sao</option>
+                        <option value="3">3 sao</option>
+                        <option value="2">2 sao</option>
+                        <option value="1">1 sao</option>
+                      </select>
+                    </div>
+                  </div>
+                  <hr>
+                  {% endfor %}
+                </ul>
+                
+                <input id="button" type="submit" class="btn btn-outline-success my-2 my-sm-0" value="Xác nhận">
+              </div>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
     <!-- list san pham -->
