--- a/register/templates/customer/index.html
+++ b/register/templates/customer/index.html
@@ -61,7 +61,7 @@
           <div class="card-body">
             <div class="featured__item ">
               <div class="featured__item__text" style="height: 100px;">
-                <h6><a href="#">{{product.product_name}}</a></h6>
+                <h6><a href="/productdetail/{{ product.id }}">{{product.product_name}}</a></h6>
                 <h5>{{product.price}} VNĐ</h5>
               </div>
               <a href="/addtocart/{{ product.id }}">Add to cart</a>
