update add product description

--- a/register/templates/admin/add_product.html
+++ b/register/templates/admin/add_product.html
@@ -93,6 +93,13 @@
                     </div>
                 </div>
                 <div class="form-row">
+                    <div class="form-group col-md-12">
+                        <label for="inputEmail5">Product's description</label>
+                        <input type="text" class="form-control" id="inputEmail5" placeholder="description" name="description"
+                            required="required">
+                    </div>
+                </div>
+                <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputCity">Image link</label>
                         <input type="text" class="form-control" id="inputCity" name="image_url" required="required">
