--- a/register/templates/customer/rating.html
+++ b/register/templates/customer/rating.html
@@ -241,7 +241,7 @@
   <div class="container">
     <div class="checkout__form card">
       <div class="card-header" style="background-color: #fff; text-align: center;">
-        <h3>Chi tiết hóa đơn</h3>
+        <h3>Đánh giá sản phẩm</h3>
       </div>
       <div class="card-body">
         <form method="post">
