update edit product

--- a/register/templates/admin/product.html
+++ b/register/templates/admin/product.html
@@ -92,7 +92,7 @@
           <td>{{product.price}}</td>
           <td>{{product.product_type}}</td>
           <td>{{product.quantity}}</td>
-          <td><a href="/editproduct/{{ product.id }}">Chỉnh sửa</a></td>
+          <td><a href="editproduct/{{ product.id }}">Chỉnh sửa</a></td>
         </tr>
         {% endfor %}
       </tbody>
