--- a/register/templates/admin/editproduct.html
+++ b/register/templates/admin/editproduct.html
@@ -58,7 +58,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Add product</title>
+    <title>Edit product</title>
 </head>
 
 <body>
@@ -72,10 +72,10 @@
 
     <div class="main">
         <div class="container">
-            <h1>Add product</h1>
+            <h1>Edit product</h1>
             {% if messages %}
-            <div class="alert alert-primary" role="alert">
-                Add product Success!!!
+            <div class="alert alert-success" role="alert">
+                Edit product Success!!!
             </div>
             {% endif %}
             <form method="post">
@@ -84,48 +84,65 @@
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">Product's name</label>
                         <input type="text" class="form-control" id="inputEmail4" placeholder="Name" name="product_name"
-                            required="required">
+                            required="required" value="{{product.product_name}}">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputPassword4">Quantity</label>
                         <input type="number" class="form-control" id="inputPassword4" placeholder="quantity"
-                            name="quantity" required="required">
+                            name="quantity" required="required" value="{{product.quantity}}">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="inputEmail5">Product's description</label>
                         <input type="text" class="form-control" id="inputEmail5" placeholder="description" name="description"
-                            required="required">
+                            required="required" value="{{product.description}}">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputCity">Image link</label>
-                        <input type="text" class="form-control" id="inputCity" name="image_url" required="required">
+                        <input type="text" class="form-control" id="inputCity" name="image_url" required="required" value="{{product.image}}">
                     </div>
                     <div class="form-group col-md-4">
                         <label for="inputState">Type</label>
                         <select id="inputState" class="form-control" name="product_type">
+                            {% if product.product_type == "Book" %}
                             <option selected>Book</option>
                             <option>Electronic</option>
                             <option>Clothes</option>
+                            {% endif %}
+                            {% if product.product_type == "Electronic" %}
+                            <option >Book</option>
+                            <option selected>Electronic</option>
+                            <option>Clothes</option>
+                            {% endif %}
+                            {% if product.product_type == "Clothes" %}
+                            <option selected>Book</option>
+                            <option>Electronic</option>
+                            <option selected>Clothes</option>
+                            {% endif %}
                         </select>
                     </div>
                     <div class="form-group col-md-2">
                         <label for="inputZip">Price</label>
-                        <input type="number" class="form-control" id="inputZip" name="price" required="required">
+                        <input type="number" class="form-control" id="inputZip" name="price" required="required" value="{{product.price}}">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="form-check" style="font-size: 15px;">
-                        <input class="form-check-input" type="checkbox" id="gridCheck" name="publicCheck">
+                        {% if product.public == 1 %}
+                        <input class="form-check-input" type="checkbox" id="gridCheck" name="publicCheck" checked>
+                        {% endif %}
+                        {% if product.public != 1 %}
+                        <input class="form-check-input" type="checkbox" id="gridCheck" name="publicCheck" >
+                        {% endif %}
                         <label class="form-check-label" for="gridCheck">
                             public product
                         </label>
                     </div>
                 </div>
-                <input type="submit" class="btn btn-secondary" value="Add product">
+                <input type="submit" class="btn btn-secondary" value="Edit product">
             </form>
         </div>
     </div>
