update rating process

--- a/register/templates/admin/product.html
+++ b/register/templates/admin/product.html
@@ -67,6 +67,7 @@
     <a href="../employee">Home</a>
     <a href="product">Product</a>
     <a href="order">Order</a>
+    <a href="rating">Rating</a>
     <a href="../login">Log out</a>
   </div>
 
