--- a/register/templates/admin/productrating.html
+++ b/register/templates/admin/productrating.html
@@ -50,14 +50,15 @@
             }
         }
     </style>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Employee home page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Product</title>
+
 </head>
 
 <body>
@@ -71,45 +72,48 @@
     </div>
 
     <div class="main">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="featured__controls">
-                        <ul>
-                            <button class="btn active" onclick="filterSelection('all')">All</button>
-                            <button class="btn" onclick="filterSelection('lk')">Chờ xác nhận</button>
-                            <button class="btn" onclick="filterSelection('pk')">Đang xử lý</button>
-                            <button class="btn" onclick="filterSelection('pk')">Đã hoàn thành</button>
-                        </ul>
-                    </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="featured__controls">
+                    <ul>
+                        <button class="btn active" onclick="filterSelection('all')">All</button>
+                        <button class="btn" onclick="filterSelection('lk')">5 sao</button>
+                        <button class="btn" onclick="filterSelection('pk')">4 sao</button>
+                        <button class="btn" onclick="filterSelection('pk')">3 sao</button>
+                        <button class="btn" onclick="filterSelection('pk')">2 sao</button>
+                        <button class="btn" onclick="filterSelection('pk')">1 sao</button>
+                    </ul>
                 </div>
             </div>
-            <h3 style="margin: 10px;">Danh sách đơn hàng</h3>
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th scope="col">id</th>
-                        <th scope="col">Trạng thái</th>
-                        <th scope="col">tổng phí</th>
-                        <th scope="col">Chi tiết</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for order in orders %}
-                    <tr>
-                        <th scope="row">{{order.id}}</th>
-                        <td>{{order.status}}</td>
-                        <td>{{order.price}}</td>
-                        <td><a href="orderprocess/{{ order.id }}">Chi tiết</a></td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
         </div>
-    </div>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">id</th>
+                    <th scope="col">Tên sản phẩm</th>
+                    <th scope="col">Đánh giá</th>
+                    <th scope="col">Bình luận</th>
+                    <th scope="col">Chi tiết</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for rating in ratings %}
+                <tr>
+                    <th scope="row">{{rating.id}}</th>
+                    <td>{{rating.productid.product_name}}</td>
+                    <td>{{rating.ratingid.star}} <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                        </svg> </td>
+                    <td>{{rating.ratingid.comment}}</td>
+                    <td><a href="ratingprocess/{{ rating.id }}">Xem</a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -119,6 +123,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
