--- a/register/templates/admin/ratingprocess.html
+++ b/register/templates/admin/ratingprocess.html
@@ -273,9 +273,14 @@
 
     <div class="main">
         <div class="container">
-            <div class="checkout__form card">
+            {% if messages %}
+            <div class="alert alert-success" role="alert">
+                Send feedback successfully!
+            </div>
+            {% endif %}
+            <div class="checkout__form card" style="margin: 10px;">
                 <div class="card-header" style="background-color: #fff; text-align: center;">
-                    <h3>Chi tiết hóa đơn</h3>
+                    <h3>Phản hồi khách hàng</h3>
                 </div>
                 <div class="card-body">
                     <form method="POST">
@@ -283,35 +288,39 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-6">
                                 <div class="checkout__order">
-                                    <h4>Đơn hàng ID: {{order.id}}</h4>
                                     <h4>Nhân viên xử lý: {{employee.name}}</h4>
-                                    <h4>Trạng thái đơn hàng hiện tại: {{order.status}}</h4>
-                                    <p>Chuyển trạng thái:</p>
-                                    <select id="inputState" class="form-control" name="order_status">
-                                        <option selected value="Chờ xác nhận">Chờ xác nhận</option>
-                                        <option value="Đang xử lý">Đang xử lý</option>
-                                        <option value="Đã hoàn thành">Đã hoàn thành</option>
-                                    </select>
+                                    <h4>Khách hàng đánh giá: {{productrating.ratingid.customerid.accountid.username}}</h4>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <p style="font-size: 20px;">Đánh giá: {{productrating.ratingid.star}} <svg
+                                                    xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                    fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                                    <path
+                                                        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                                </svg> </p>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <p style="font-size: 20px;">Bình luận: {{productrating.ratingid.comment}}
+                                            </p>
+                                        </div>
+                                    </div>
                                     <hr>
                                     <div class="checkout__order__products">Sản phẩm <span>Giá</span></div>
                                     <ul>
-                                        {% for item in items %}
-                                        <li>{{item.productid.product_name}}<span>{{item.price}} đ</span></li>
-                                        {% endfor %}
+                                        <li>{{productrating.productid.product_name}}<span>{{productrating.productid.price}}
+                                                đ</span></li>
                                     </ul>
-                                    <div class="checkout__order__total">Thành tiền <span>{{order.cartid.price}} đ</span>
+                                    <hr>
+                                    <div class="form-row">
+                                        <div class="form-group col-md-12">
+                                            <p>Phản hồi</p>
+                                            <input type="text" class="form-control" id="inputEmail5"
+                                                placeholder="Feedback" name="feedback" required="required">
+                                        </div>
                                     </div>
-                                    <h5>Phương thức thanh toán</h5>
-                                    <h6>{{order.paymentid.payment_type}}</h6>
-                                    <hr>
-                                    <h5>Phương thức vận chuyển</h5>
-                                    <h6>{{order.shipmentid.shipment_type}}, phí vận chuyển: {{order.shipmentid.fee}} đ
-                                    </h6>
-                                    <hr>
-                                    <div class="checkout__order__total">Tổng tiền <span>{{order.price}} đ</span></div>
                                     <hr>
                                     <input id="button" type="submit" class="btn btn-outline-primary my-2 my-sm-0"
-                                        value="XÁC NHẬN THAY ĐỔI ĐƠN HÀNG">
+                                        value="Gửi phải hồi cho khách hàng">
                                 </div>
                             </div>
                         </div>
